# cmd/web/handlers.go
@@ -10,12 +10,33 @@ import (
 	"github.com/rfinochi/golang-workshop-todo/pkg/models"
 )
 
+// getItemsEndpoint godoc
+// @Summary Get all to-do items
+// @Description Get all to-do items from the data store
+// @Produce json
+// @Param X-Todo-API-Authorization-Token header string true "Authorization Token"
+// @Success 200 {array} models.Item
+// @Header 200 {string} X-Todo-API-Revision "API Revision Number"
+// @Header 200 {string} X-Todo-API-Request-ID "API Request Id"
+// @Router / [get]
+func (app *application) getItemsEndpoint(c *gin.Context) {
+	items, err := app.itemModel.GetItems()
+	if err != nil {
+		app.serverError(c.Writer, err)
+	} else {
+		common.RespondOkWithData(c, items)
+	}
+}
+
 // getItemEndpoint godoc
 // @Summary Get a to-do item
 // @Description Get a to-do item by id from the data store
 // @Produce json
 // @Param id path int true "To-Do Item Id"
+// @Param X-Todo-API-Authorization-Token header string true "Authorization Token"
 // @Success 200 {object} models.Item
+// @Header 200 {string} X-Todo-API-Revision "API Revision Number"
+// @Header 200 {string} X-Todo-API-Request-ID "API Request Id"
 // @Router /{id} [get]
 func (app *application) getItemEndpoint(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
@@ -36,28 +57,16 @@ func (app *application) getItemEndpoint(c *gin.Context) {
 	common.RespondOkWithData(c, item)
 }
 
-// getItemsEndpoint godoc
-// @Summary Get all to-do items
-// @Description Get all to-do items from the data store
-// @Produce json
-// @Success 200 {array} models.Item
-// @Router / [get]
-func (app *application) getItemsEndpoint(c *gin.Context) {
-	items, err := app.itemModel.GetItems()
-	if err != nil {
-		app.serverError(c.Writer, err)
-	} else {
-		common.RespondOkWithData(c, items)
-	}
-}
-
 // postItemEndpoint godoc
 // @Summary Create a to-do item
 // @Description Insert a to-do item into the data store
 // @Accept json
 // @Produce json
 // @Param item body models.Item true "To-Do Item"
+// @Param X-Todo-API-Authorization-Token header string true "Authorization Token"
 // @Success 201 {string} string "{\"message\": \"Ok\"}"
+// @Header 201 {string} X-Todo-API-Revision "API Revision Number"
+// @Header 201 {string} X-Todo-API-Request-ID "API Request Id"
 // @Router / [post]
 func (app *application) postItemEndpoint(c *gin.Context) {
 	var newItem models.Item
@@ -85,7 +94,10 @@ func (app *application) postItemEndpoint(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param item body models.Item true "To-Do Item"
+// @Param X-Todo-API-Authorization-Token header string true "Authorization Token"
 // @Success 201 {string} string "{\"message\": \"Ok\"}"
+// @Header 201 {string} X-Todo-API-Revision "API Revision Number"
+// @Header 201 {string} X-Todo-API-Request-ID "API Request Id"
 // @Router / [put]
 func (app *application) putItemEndpoint(c *gin.Context) {
 	var newItem models.Item
@@ -114,7 +126,10 @@ func (app *application) putItemEndpoint(c *gin.Context) {
 // @Produce json
 // @Param id path int true "To-Do Item Id"
 // @Param item body models.Item true "To-Do Item"
+// @Param X-Todo-API-Authorization-Token header string true "Authorization Token"
 // @Success 200 {string} string "{\"message\": \"Ok\"}"
+// @Header 200 {string} X-Todo-API-Revision "API Revision Number"
+// @Header 200 {string} X-Todo-API-Request-ID "API Request Id"
 // @Router /{id} [patch]
 func (app *application) updateItemEndpoint(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
@@ -148,7 +163,10 @@ func (app *application) updateItemEndpoint(c *gin.Context) {
 // @Description Delete a to-do item from the data store
 // @Produce json
 // @Param id path int true "To-Do Item Id"
+// @Param X-Todo-API-Authorization-Token header string true "Authorization Token"
 // @Success 200 {string} string "{\"message\": \"Ok\"}"
+// @Header 200 {string} X-Todo-API-Revision "API Revision Number"
+// @Header 200 {string} X-Todo-API-Request-ID "API Request Id"
 // @Router /{id} [delete]
 func (app *application) deleteItemEndpoint(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
